syntax = "proto3";

option csharp_namespace = "RPC_DataAnalyserService";

package analysis;

// The data analysis service definition
service DataAnalysisService {
  // Perform statistical analysis on sensor data
  rpc AnalyzeData (AnalysisRequest) returns (AnalysisResponse);
  
  // Detect patterns in sensor data
  rpc DetectPatterns (PatternDetectionRequest) returns (PatternDetectionResponse);
}

// Request message for data analysis
message AnalysisRequest {
  repeated SensorData data_points = 1;
  string analysis_type = 2;  // e.g., "wave", "wind", "temperature", "all"
  string time_range = 3;     // e.g., "1h", "1d", "1w"
  string location = 4;       // Location filter, if any
}

// Response message for data analysis
message AnalysisResponse {
  map<string, double> statistics = 1;  
  map<string, WaveStatistics> wave_stats = 2;
  map<string, WindStatistics> wind_stats = 3; 
  map<string, TemperatureStatistics> temp_stats = 4;
  bool success = 5;
  string error_message = 6;
}

// Wave statistics
message WaveStatistics {
  double avg_height = 1;
  double max_height = 2;
  double min_height = 3;
  double avg_period = 4;
  double max_period = 5;
  double min_period = 6;
  double avg_direction = 7;
  string predominant_direction = 8;
}

// Wind statistics
message WindStatistics {
  double avg_speed = 1;
  double max_speed = 2;
  double min_speed = 3;
  double avg_gust = 4;
  double max_gust = 5;
  double avg_direction = 6;
  string predominant_direction = 7;
}

// Temperature statistics
message TemperatureStatistics {
  double avg_air_temp = 1;
  double max_air_temp = 2;
  double min_air_temp = 3;
  double avg_sea_temp = 4;
  double max_sea_temp = 5;
  double min_sea_temp = 6;
  double avg_humidity = 7;
}

// Request message for pattern detection
message PatternDetectionRequest {
  repeated SensorData data_points = 1;
  string pattern_type = 2;  // e.g., "trend", "anomaly", "cycle", "storm"
  string data_field = 3;    // e.g., "wave_height", "wind_speed", "temperature"
  int32 window_size = 4;    // Time window size for pattern detection
}

// Response message for pattern detection
message PatternDetectionResponse {
  repeated Pattern patterns = 1;
  repeated StormEvent storm_events = 2;
  repeated AnomalyEvent anomalies = 3;
  bool success = 4;
  string error_message = 5;
}

// Ocean data message
message SensorData {
  string sensor_id = 1;
  double longitude = 2;
  double latitude = 3;
  string timestamp = 4;
  double atmosphere_mb = 5;
  double wind_direction_degrees = 6;
  double wind_speed_kn = 7;
  double gust_kn = 8;
  double wave_height_m = 9;
  double wave_period_s = 10;
  double mean_wave_direction_degrees = 11;
  double hmax_m = 12;
  double air_temperature_c = 13;
  double dew_point_c = 14;
  double sea_temperature_c = 15;
  double relative_humidity_percent = 16;
  int32 qc_flag = 17;
  string station_id = 18;  // Use this as station_id
  string value = 19;      // Optional for other data values
  string unit = 20;       // Unit of measurement
}

// Pattern message
message Pattern {
  string type = 1;
  string description = 2;
  double confidence = 3;
  string start_time = 4;
  string end_time = 5;
  double intensity = 6;
  string location = 7;
}

// Storm event message
message StormEvent {
  string start_time = 1;
  string end_time = 2;
  double peak_wave_height = 3;
  double peak_wind_speed = 4;
  double peak_gust = 5;
  string location = 6;
  int32 severity = 7;  // 1-5 scale
  string description = 8;
}

// Anomaly event message
message AnomalyEvent {
  string timestamp = 1;
  string parameter = 2;  // which parameter shows anomaly
  double expected_value = 3;
  double actual_value = 4;
  double deviation_percent = 5;
  string location = 6;
  int32 confidence = 7;  // 1-100
}
